--- a/.github/workflows/auto_task_bilili.yml
+++ b/.github/workflows/auto_task_bilili.yml
@@ -9,8 +9,7 @@ on:
   pull_request:
     branches: main
   workflow_dispatch:
-  schedule:
-    - cron: '10 1 * * *'
+  schedule
     # cron表达式，Actions时区是UTC时间，所以上午9点要往前推8个小时
 
 
